UI fix: feedback from hilary (Can we remove the background color for read email rows in dark mode? This dark grey color should be used for the selected state email rows in dark mode (missing). The read state email rows in dark mode should have the same background color as unread rows.)

--- a/app/internal_packages/ui-dark/styles/override-email.less
+++ b/app/internal_packages/ui-dark/styles/override-email.less
@@ -143,9 +143,9 @@
       .list-column-HoverActions .inner {
         background-image: -webkit-linear-gradient(
           left,
-          fade(@list-bg, 0%) 0%,
-          @list-bg 38%,
-          @list-bg 100%
+          fade(@white, 0%) 0%,
+          @white 38%,
+          @white 100%
         );
       }
     }
